# ropic

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  examples.h  main.cpp
.github/workflows/: cmake-multi-platform.yml
benchmark/: CMakeLists.txt  RecursiveBenchmark.cpp
cmake/: ropic.in  ropicConfig.cmake.in  version.hpp.in
examples/: CMakeLists.txt  Error.hpp  Generator.hpp  Result.hpp  examples.h  main.cpp  tasks.hpp
src/: ropic.hpp
src/core/: Attributes.hpp  Borrow.hpp  Borrower.hpp  Either.hpp  EitherAwaiter.inl  EitherPromise.inl  Void.hpp  attributes.hpp  borrower.hpp  either.hpp  either_awaiters.inl  either_concept.hpp  either_impl.hpp  either_promise.inl  void.hpp
src/extra/: Error.hpp  Result.hpp
tests/: CMakeLists.txt
tests/either/: CMakeLists.txt  EitherBoundary.test.cpp  EitherCoroutine.test.cpp  EitherMoveSemantics.test.cpp  EitherRecursiveBenchmark.test.cpp  EitherValueMode.test.cpp  EitherVoidType.test.cpp  TestHelpers.cpp  TestHelpers.hpp
